# libbookmarks

./: .gitignore  Cargo.toml  Readme.md
examples/: folder.rs  tags.rs
migrations/2020-01-20-161811_initial/: down.sql  up.sql
src/: api.rs  error.rs  lib.rs  schema.rs
src/models/: bookmark.rs  folder.rs  mod.rs  tag.rs
tests/: test.rs
tests/create/: bookmarks.rs  folders.rs  mod.rs  tag.rs
tests/edit/: bookmark.rs  folder.rs  mod.rs  tag.rs
